[package]
name = "math_utils_lib"
description = "A library providing math utilities such as a parser/evaluator and a LaTeX export to export a history of parsed expressions and solved equations to LaTeX."
version = "0.4.0"
edition = "2021"
license-file = "LICENSE.txt"
documentation = "https://docs.rs/math_utils_lib/latest/math_utils_lib/"
repository="https://github.com/Waigo01/math_utils_lib"
readme = "README.md"
keywords = ["mathparsing", "parser", "eval", "math_lib", "math_utils"]
categories = ["mathematics", "parser-implementations"]

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embed-doc-image = { version = "0.1.4", optional = true }
mathjax = { version = "0.1.1", optional = true, features = ["image"] }
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", branch = "master", optional = true }
image = { version = "0.24.6", optional = true }

[features]
default = ["column-major", "output"]
doc-images = ["dep:embed-doc-image"]
high-prec = []
column-major = []
output = ["dep:mathjax", "dep:image", "dep:tectonic"]
